Bug 15702 - Bad variable definition for ParseTuple causing test failure for Smb3UnixTests.test_create_context_reparse
Summary: Bad variable definition for ParseTuple causing test failure for Smb3UnixTest...
Status: RESOLVED FIXED
Alias: None
Product: Samba 4.1 and newer
Classification: Unclassified
Component: Python (show other bugs)
Version: 4.21.0rc4
Hardware: All All
: P5 normal (vote)
Target Milestone: ---
Assignee: Jule Anger
QA Contact: Samba QA Contact
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2024-08-28 15:39 UTC by Noel Power
Modified: 2024-09-02 11:45 UTC (History)
1 user (show)

See Also:


Attachments
backported patch for 4.21 (1.59 KB, patch)
2024-08-29 08:02 UTC, Noel Power
vl: review+
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Noel Power 2024-08-28 15:39:05 UTC

    
Comment 1 Noel Power 2024-08-28 15:40:15 UTC
On tumbleweed with 4.21


make test TESTS=samba.tests.smb3unix fails with

python/samba/tests/smb3unix.py", line 430, in test_create_context_reparse
    self.assertEqual(cc.reparse_tag, tag)
AssertionError: 0 != 2147483685
Comment 2 Samba QA Contact 2024-08-28 18:38:04 UTC
This bug was referenced in samba master:

56c48154028207a831242fe6f4ca28fb64b60faf
Comment 3 Noel Power 2024-08-29 08:02:45 UTC
Created attachment 18422 [details]
backported patch for 4.21
Comment 4 Jule Anger 2024-08-29 11:54:21 UTC
Pushed to autobuild-v4-21-test.
Comment 5 Samba QA Contact 2024-08-29 13:11:05 UTC
This bug was referenced in samba v4-21-test:

eed4dfe3a47f5fd089cf1846e5c69bc0e56187a5
Comment 6 Jule Anger 2024-08-29 13:15:15 UTC
Closing out bug report.

Thanks!
Comment 7 Samba QA Contact 2024-09-02 11:45:02 UTC
This bug was referenced in samba v4-21-stable (Release samba-4.21.0):

eed4dfe3a47f5fd089cf1846e5c69bc0e56187a5